fixed CSS - input/dropdown width, gap between input and dropdown, dropdown does not move table down, separated input.css

--- a/src/container/SearchContainer.scss
+++ b/src/container/SearchContainer.scss
@@ -1,27 +1,3 @@
 #search-container {
   margin: 2%;
 }
-
-.dropdown {
-  position: relative;
-  border-spacing: 0;
-  border-width: 1px;
-  border-color: black;
-  border-style: solid;
-  list-style: none;
-  width: 88px;
-  font-size: 12px;
-  z-index: 100;
-}
-
-#dropDownItem:hover {
-  background-color: gold;
-}
-
-
-/*
- look into scss, and use this instead of css
-- make the header a different color
-- make the input and drop down box width larger to accomodate the large output
-- make the gap between the drop down and the input box smaller
-*/
